@@ -1,3 +1,10 @@
+2003-08-14  Uwe Pross  <uwe.pross@gmx.net>
+
+	* logo-competition/logos/Daniel_J_Parks/*: 
+	* logo-competition/logos/Branko_Collin/*: 
+	* logo-competition/logos_new.php: 
+	Added logos
+	
 2003-08-08  Uwe Pross  <uwe.pross@gmx.net>
 
 	* logo-competition/logos_new.php:
